Viewmodelがない問題を解決

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -67,6 +67,11 @@
 		<item name="android:fontFamily">@string/font_family_medium</item>
 	</style>
 
+	<style name="TabTextAppearance">
+		<item name="android:textAllCaps">false</item>
+		<item name="android:textSize">@dimen/body</item>
+	</style>
+
 	<!-- Typography -->
 	<style name="TextPrimary">
 		<item name="android:textColor">@color/text_primary</item>
